--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "gsap": "^3.7.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-autocomplete": "^2.6.0",
     "react-google-button": "^0.7.2",
+    "react-quill": "^2.0.0-beta.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
