--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-google-autocomplete": "^2.6.0",
     "react-google-button": "^0.7.2",
     "react-hook-form": "^7.24.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-quill": "^2.0.0-beta.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
