--- a/firebase.json
+++ b/firebase.json
@@ -9,7 +9,7 @@
         "headers": [
           {
             "key": "Cache-Control",
-            "value": "no-cache, no-store, must-revalidate"
+            "value": "public, max-age=0"
           }
         ]
       }
